# disnake-ext-plugins

./: .flake8  .gitignore  .pdm.toml  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: lint.yml
disnake/ext/plugins/: __init__.py  plugin.py
tests/: test_plugins.py
